--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/**
+ /**
 * Template Name: Kelly
 * Template URL: https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/
 * Updated: Mar 17 2024 with Bootstrap v5.3.3
@@ -469,6 +469,32 @@ h6 {
   background: #3dc8b7;
 }
 
+.container {
+  text-align: center;
+}
+
+/* Estilos para telas menores que 768px (celulares) */
+@media (max-width: 767px) and (orientation: portrait) {
+  #hero   {
+    max-width: 80%; /* Define a largura máxima da imagem como 80% da largura da tela */
+    height: auto; /* Altura será ajustada automaticamente */
+    margin: 10px; /* Adiciona um espaçamento ao redor da imagem */
+  }
+}
+
+
+/* Estilos para telas menores que 768px (celulares) */
+@media (max-width: 767px) {
+  #hero   {
+    max-width: 100%; /* Define a largura máxima da imagem como 100% da largura da tela */
+    height: auto; /* Altura será ajustada automaticamente */
+    margin: 10px; /* Adiciona um espaçamento ao redor da imagem */
+  }
+}
+
+/* Estilos para telas maiores ou iguais a 768px (computadores) *
+
+/*
 @media (min-width: 1024px) {
   #hero {
     background-attachment: fixed;
@@ -478,14 +504,14 @@ h6 {
 @media (max-width: 992px) {
   #hero:before {
     content: "";
-    background: rgba(255, 255, 255, 0.8);
+    /*background: rgba(255, 255, 255, 0.8);
     position: absolute;
     bottom: 0;
     top: 0;
     left: 0;
     right: 0;
   }
-
+*/
   #hero h1 {
     font-size: 28px;
     line-height: 36px;
@@ -495,7 +521,7 @@ h6 {
     font-size: 18px;
     line-height: 24px;
   }
-}
+
 
 /*--------------------------------------------------------------
 # Sections General
